# mdde2

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  queries.py
app/: main.py
app/frontend/: controller.py  service.py
app/frontend/datasets/: controller.py  service.py
app/frontend/datatables/: controller.py  service.py
app/frontend/file_types/: controller.py  service.py
app/queries/: common.py  datatables.py
app/routers/: datatables.py
static/: style.css
templates/: base.html  dataset_file_info.html  dataset_files_all_table.html  dataset_files_page.html  dataset_info.html  datasets.html  datasets_page.html  file_table_template.html  file_type_download_prompt.html  file_types.html  gro_files.html  gro_files_table.html  index.html  index_page.html  mdp_files.html  mdp_files_table.html  parameter_table_template.html  search.html  topology_table_template.html  trajectory_table_template.html  xtc_files_table.html
