[project]
name = "mdde2"
version = "0.1.0"
description = "MDverse Data Explorer"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Giulia Di Gennaro", email = "giuliadgm05@gmail.com"},
    {name = "Pierre Poulain", email = "pierre.poulain@cupnet.net"}
]
maintainers = [
    {name = "Pierre Poulain", email = "pierre.poulain@cupnet.net"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "matplotlib>=3.10.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.8",
    "pytest>=8.3.5",
]
